Bug 1201197 - add dedicated listener to enumerateDevices. r=jesup